# medsight-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
configs/: chestxray_baseline.yaml  mammography_baseline.yaml  retinal_baseline.yaml
examples/: README.md  smoke_train.py
src/medsight/: __init__.py  augment.py  augment_advanced.py  cli.py  cli_extra.py  config.py  crossval.py  datasets.py  eval_.py  inference.py  metrics.py  normalize.py  postprocess.py  preprocess.py  preprocess_enhanced.py  split.py  visualize.py
src/medsight/datasets/: __init__.py  csv_loader.py  dicom.py  nifti.py
src/medsight/losses/: __init__.py  composed.py  dice.py  focal.py
src/medsight/models/: resnet_wrapper.py  simple_cnn.py  unet.py
src/medsight/training/: __init__.py  callbacks.py  scheduler.py  trainer.py
tests/: test_augment.py  test_config.py  test_datasets.py  test_integration.py  test_losses.py  test_metrics.py  test_preprocess.py  test_visualize.py
