[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medsight-ai"
version = "0.1.0"
description = "Reproducible deep learning pipelines for medical imaging"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "alfianmushh"}]
keywords = ["medical-imaging", "deep-learning", "radiology", "pytorch"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1", "torchvision>=0.16"]
dicom = ["pydicom>=2.4"]
nifti = ["nibabel>=5.2"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
medsight = "medsight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
